GitVersion1/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Additional_Needs__c</fullName>
        <label>Additional Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_or_B2C__c</fullName>
        <label>B2B or B2C</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breakout_Rooms_Required__c</fullName>
        <label>Breakout Rooms Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breakout_Rooms_Requirements__c</fullName>
        <label>Breakout Rooms Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carpet_Quantity__c</fullName>
        <label>Carpet Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chairs_Quantity__c</fullName>
        <label>Chairs Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closest Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Closest Retailer)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_retailer_participating_in_the_ev__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Closest retailer participating in the event?</inlineHelpText>
        <label>Closest retailer participating in the ev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coat_Hanger_Quantity__c</fullName>
        <label>Coat Hanger Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contestant_Prizes__c</fullName>
        <label>Contestant Prizes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_details__c</fullName>
        <label>Coupon details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Displaying_Product__c</fullName>
        <label>Displaying Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Quantity__c</fullName>
        <label>Electrical Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feed_Credit_details__c</fullName>
        <label>Feed Credit details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Preference__c</fullName>
        <label>Hotel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Best Availible</fullName>
                </value>
                <value>
                    <fullName>Hilton</fullName>
                </value>
                <value>
                    <fullName>Marriot</fullName>
                </value>
                <value>
                    <fullName>Embassy</fullName>
                </value>
                <value>
                    <fullName>Holiday Inn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_feed_will_be_provided_for_this_event__c</fullName>
        <inlineHelpText>If feed will be provided for this event, list product names and quantities</inlineHelpText>
        <label>If feed will be provided for this event,</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_there_is_a_prize_drawing_indicate_det__c</fullName>
        <inlineHelpText>If there is a prize drawing indicate details</inlineHelpText>
        <label>If there is a prize drawing indicate det</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Room_Requirements__c</fullName>
        <label>Meeting Room Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Elk River</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Tags__c</fullName>
        <label>Name Tags</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Adhesive</fullName>
                </value>
                <value>
                    <fullName>Clip on</fullName>
                </value>
                <value>
                    <fullName>Lanyard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Meeting_Attendees__c</fullName>
        <label>Number of Meeting Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Meeting_Rooms_Required__c</fullName>
        <label>Number of Meeting Rooms Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Padding_Quantity__c</fullName>
        <label>Padding Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Giveaways__c</fullName>
        <label>Premium Giveaways</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Ad__c</fullName>
        <label>Print Ad</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Group</label>
        <referenceTo>Project_Group__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_details__c</fullName>
        <label>Promotion details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Service_Announcement__c</fullName>
        <label>Public Service Announcement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Check_Payment__c</fullName>
        <label>Request Check Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sleeping_Rooms_Required__c</fullName>
        <label>Sleeping Rooms Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Nutrena Full Farm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsorship Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Benefit__c</fullName>
        <label>Sponsorship Benefit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Feed Credit</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Level__c</fullName>
        <label>Sponsorship Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Baxter</fullName>
                </value>
                <value>
                    <fullName>Sonya</fullName>
                </value>
                <value>
                    <fullName>Southern States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsorship_Name__c</fullName>
        <label>Sponsorship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Needed_per_day__c</fullName>
        <label>Staff Needed per day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Elk River</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tables_Quantity__c</fullName>
        <label>Tables Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Address__c</fullName>
        <label>Tradeshow Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tradeshow Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Contact_Email__c</fullName>
        <label>Tradeshow Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Contact_Name__c</fullName>
        <label>Tradeshow Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Contact_Phone__c</fullName>
        <label>Tradeshow Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Tote_Bags__c</fullName>
        <label>Tradeshow Tote Bags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tradeshow_Type__c</fullName>
        <label>Tradeshow Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Screen_Commercial__c</fullName>
        <label>Video Screen Commercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Meetings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Meeting</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Closed Meetings</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Sponsorship</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Sponsorship</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Closed Sponsorship</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Tradeshows</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Tradeshow</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Aborted</value>
        </filters>
        <label>Closed Tradeshows</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Meetings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Meeting</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Planned</value>
        </filters>
        <label>Open Meetings</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Sponsorships</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Sponsorship</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Planned</value>
        </filters>
        <label>Open Sponsorships</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Tradeshows</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Tradeshow</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress,Planned</value>
        </filters>
        <label>Open Tradeshows</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Meeting</fullName>
        <active>true</active>
        <description>Use this Record Type to create a Meeting type of Campaign</description>
        <label>Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship</fullName>
        <active>true</active>
        <description>Use this Record Type to create a Sponsorship type of Campaign</description>
        <label>Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tradeshow</fullName>
        <active>true</active>
        <description>Use this Record Type to create a Tradeshow type of Campaign</description>
        <label>Tradeshow</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>